--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 SQLAlchemy==1.4.40
 Werkzeug==2.2.2
 WTForms==3.0.1
